--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Meme Invázió</title>
 </head>
 <body>
-    
+    <div class="tarolo">
+        <div class="focim">
+            <span class="focim_zold">meme</span>invazio
+        </div>
+        <div class="login">
+            <button id="btnLogin" type="button">Belépés</button>
+        </div>
+        <div class="reg">
+            <button id="btnReg" type="button">Regisztráció</button>
+        </div>
+    </div>
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
