home.css, css and js are added, hamburger

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>memeinvázió</title>
     <link rel="stylesheet" href="./css/index.css">
-    <title>Meme Invázió</title>
 </head>
 <body>
     <div class="tarolo">
         <div class="focim">
             <span class="focim_zold">meme</span>invazio
         </div>
+
         <div class="login">
-            <button id="btnLogin" type="button">Belépés</button>
+            <button type="button" id="btnLogin">Belépés</button>
         </div>
+
         <div class="reg">
-            <button id="btnReg" type="button">Regisztráció</button>
+            <button type="button" id="btnReg">Regisztráció</button>
         </div>
     </div>
 
