--- a/html/newMeme.html
+++ b/html/newMeme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/newMeme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -36,9 +36,18 @@
             </a>
         </nav>
     </header>
-    <div class="fixed">
-        <i class="fa-solid fa-plus"></i>
-    </div>
-    <script src="../js/home.js"></script>
+    <main>
+        <div class="newMeme">
+            <label for="fileUpload">
+                <i class="fa-solid fa-paperclip"></i>
+                Kép beillesztése
+            </label>
+            <input type="file" id="fileUpload">t
+        </div>
+    </main>
+
+
+    <script src="../js/newMeme.js"></script>
+
 </body>
 </html>
