--- a/html/newMeme.html
+++ b/html/newMeme.html
@@ -42,8 +42,13 @@
                 <i class="fa-solid fa-paperclip"></i>
                 Kép beillesztése
             </label>
-            <input type="file" id="fileUpload">t
+            <input type="file" id="fileUpload">
         </div>
+
+        <div class="uploadButton">
+            <button type="button">Feltöltés</button>
+        </div>
+
     </main>
 
 
