like/unlike funkció

--- a/html/newMeme.html
+++ b/html/newMeme.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/newMeme.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>memeinvazio</title>
+    <link rel="stylesheet" href="../css/newMeme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header id="header">
         <div class="menu-logo">
             <span class="menu-logo-green">meme</span>invazio
         </div>
-        
+
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger-menu">
             <span></span>
@@ -24,35 +26,33 @@
 
         <nav>
             <a href="#header" class="icon-home">
-                <i class="fa-solid fa-house-user"></i>
+                <i class="fa-solid fa-house"></i>
             </a>
-
-            <a href="" class="user-icon">
+            <a href="#" class="icon-user">
                 <i class="fa-solid fa-user"></i>
             </a>
-
-            <a class="icon-logout">
-                <i class="fa-solid fa-right-from-bracket"></i>
+            <a href="#" class="icon-logout">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
             </a>
         </nav>
     </header>
+
     <main>
         <div class="newMeme">
             <label for="fileUpload">
                 <i class="fa-solid fa-paperclip"></i>
-                Kép beillesztése
+                kép beillesztése
             </label>
+
             <input type="file" id="fileUpload">
         </div>
 
         <div class="uploadButton">
             <button type="button">Feltöltés</button>
         </div>
-
     </main>
 
-
     <script src="../js/newMeme.js"></script>
-
 </body>
+
 </html>
