--- a/html/home.html
+++ b/html/home.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>memeinvazio</title>
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header id="header">
         <div class="menu-logo">
             <span class="menu-logo-green">meme</span>invazio
         </div>
-        
+
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger-menu">
             <span></span>
@@ -24,21 +26,120 @@
 
         <nav>
             <a href="#header" class="icon-home">
-                <i class="fa-solid fa-house-user"></i>
+                <i class="fa-solid fa-house"></i>
             </a>
-
-            <a href="" class="user-icon">
+            <a href="#" class="icon-user">
                 <i class="fa-solid fa-user"></i>
             </a>
-
-            <a class="icon-logout">
-                <i class="fa-solid fa-right-from-bracket"></i>
+            <a href="#" class="icon-logout">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
             </a>
         </nav>
     </header>
+
     <div class="fixed">
         <i class="fa-solid fa-plus"></i>
     </div>
+
+    <div class="row">
+        <div class="card">
+            <div class="card-header">
+                <img src="../img/profile.jpg" alt="profil">
+                Örkény István
+            </div>
+            <div class="card-body">
+                <div class="pic-div">
+                    <img src="../img/meme3.png" alt="meme3">
+                </div>
+            </div>
+            <div class="card-footer">
+                <span>54</span>
+                <i class="fa-solid fa-thumbs-up"></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <img src="../img/profile.jpg" alt="profil">
+                Örkény István
+            </div>
+            <div class="card-body">
+                <div class="pic-div">
+                    <img src="../img/meme3.png" alt="meme3">
+                </div>
+            </div>
+            <div class="card-footer">
+                <span>54</span>
+                <i class="fa-solid fa-thumbs-up"></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <img src="../img/profile.jpg" alt="profil">
+                Örkény István
+            </div>
+            <div class="card-body">
+                <div class="pic-div">
+                    <img src="../img/meme3.png" alt="meme3">
+                </div>
+            </div>
+            <div class="card-footer">
+                <span>54</span>
+                <i class="fa-solid fa-thumbs-up"></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <img src="../img/profile.jpg" alt="profil">
+                Örkény István
+            </div>
+            <div class="card-body">
+                <div class="pic-div">
+                    <img src="../img/meme3.png" alt="meme3">
+                </div>
+            </div>
+            <div class="card-footer">
+                <span>54</span>
+                <i class="fa-solid fa-thumbs-up"></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <img src="../img/profile.jpg" alt="profil">
+                Örkény István
+            </div>
+            <div class="card-body">
+                <div class="pic-div">
+                    <img src="../img/meme3.png" alt="meme3">
+                </div>
+            </div>
+            <div class="card-footer">
+                <span>54</span>
+                <i class="fa-solid fa-thumbs-up"></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <img src="../img/profile.jpg" alt="profil">
+                Örkény István
+            </div>
+            <div class="card-body">
+                <div class="pic-div">
+                    <img src="../img/meme3.png" alt="meme3">
+                </div>
+            </div>
+            <div class="card-footer">
+                <span>54</span>
+                <i class="fa-solid fa-thumbs-up"></i>
+            </div>
+        </div>
+    </div>
+
     <script src="../js/home.js"></script>
 </body>
+
 </html>
